--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.1.16",
     "pug": "^3.0.0",
-    "slug": "^4.0.2"
+    "slug": "^4.0.2",
+    "underscore": "^1.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
